--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   run-script:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -16,6 +17,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.13
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run Script
         run: |
