--- a/.github/workflows/gold-silver.yml
+++ b/.github/workflows/gold-silver.yml
@@ -1,4 +1,4 @@
-name: Run GitHub Action Workflow Every 6 hours
+name: Gold and Silver - Run GitHub Action Workflow Every 6 hours
 
 on:
   workflow_dispatch: # Allows manual triggering
